--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb+srv://hakixer:mynameisexcel2@mern-app.6jk1agk.mongodb.net/?retryWrites=true&w=majority&appName=mern-app
 JWT_SECRET=mYs3cr3tK#y2025!@d1fF4W9
+# mongodb://localhost:27017
